--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chittagong Convention Center</title>
+    <!-- External Css  -->
+    <link rel="stylesheet" href="style.css">
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -16,7 +19,7 @@
 
         <!-- navbar  -->
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between ">
                 <a class="navbar-brand" href="#">
                     <h4>Chittagong Convention Center</h4>
                 </a>
@@ -78,9 +81,177 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-
     </header>
     <main>
+        <!-- Pricing Section  -->
+        <section class="container my-5">
+            <h1 class="text-center my-5">Our package</h1>
+            <div class="row">
+                <div class="col-sm-12 col-lg-3 col-md-6 my-5">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 style="color:#231D4F;" class="card-title">$300</h2>
+                            <h3 style="color:#231D4F;">Business fair</h3>
+                            <p style="color: #848199;" class="card-text fw-normal">For most businesses event
+                                like book fair, craft fair.
+                            </p>
+                            <ul class="Unfeatured-card">
+                                <li>Limited space access</li>
+                                <li>Secuirty facility</li>
+                                <li>Event support</li>
+                                <li>Decoration design</li>
+                                <li>Per day bill</li>
+                            </ul>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-3 col-md-6 my-5">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 style="color:#231D4F;" class="card-title">$300</h2>
+                            <h3 style="color:#231D4F;">Business fair</h3>
+                            <p style="color: #848199;" class="card-text fw-normal">For most businesses event
+                                like book fair, craft fair.
+                            </p>
+                            <ul class="Unfeatured-card">
+                                <li>Full space access</li>
+                                <li>Food arrangement</li>
+                                <li>Mangement support</li>
+                                <li>Decoration design</li>
+                                <li>Billed as shift</li>
+                            </ul>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-3 col-md-6">
+                    <div class="card border-0 bg-featured">
+                        <div class="card-body">
+                            <h2 class="card-title text-white">$300</h2>
+                            <h3 class=" text-white">Business fair</h3>
+                            <p class="card-text fw-normal text-white">For most businesses event
+                                like book fair, craft fair.
+                            </p>
+                            <ul class="featured-card">
+                                <li>Full space access</li>
+                                <li>Dedicated team</li>
+                                <li>Buffet food</li>
+                                <li>Premium Decoration</li>
+                                <li>Pay as plan</li>
+                            </ul>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-3 col-md-6 my-5">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 style="color:#231D4F;" class="card-title">$300</h2>
+                            <h3 style="color:#231D4F;">Business fair</h3>
+                            <p style="color: #848199;" class="card-text">For most businesses event
+                                like book fair, craft fair.
+                            </p>
+                            <ul class="Unfeatured-card">
+                                <li>Full space access</li>
+                                <li>Dedicated team</li>
+                                <li>Buffet food</li>
+                                <li>Premium Decoration</li>
+                                <li>Pay as plan</li>
+                            </ul>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently Asked Questions Section  -->
+        <section class="container">
+            <h1 class="text-center my-5">Happy Clients says</h1>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="accordion" id="accordionPanelsStayOpenExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                    aria-controls="panelsStayOpen-collapseOne">
+                                    How is Spacious?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body">
+                                    One of the most important features that a convention center should have is
+                                    spaciousness. This allows the staging of different kinds of events allowing to
+                                    maximize the space and layout; where exhibitors can set up trade booths to display
+                                    their products, services, and other offerings.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseTwo">
+                                    What about Reputable?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingTwo">
+                                <div class="accordion-body">
+                                    Another must-have feature of a convention center is its sound reputation. Though one
+                                    may imagine that reputation may be difficult to measure, it is as easy as looking
+                                    into its foreign and local affiliations more than the number of conventions and
+                                    exhibitions or other events that are held in the venue year after year.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseThree">
+                                    Highly Accessible?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingThree">
+                                <div class="accordion-body">
+                                    A convention center should also be highly accessible. Event participants, guests,
+                                    and keynote speakers must be able to reach the venue easily either by public or
+                                    private transportation.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseFour">
+                                    Has a Wide Variety of Rooms?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingFour">
+                                <div class="accordion-body">
+                                    A convention center should be able to hold large-scale events. But it should also
+                                    have the capacity to cater to organizations that may want to hold meetings in
+                                    smaller scale or in more optimized locations. The availability of a variety of
+                                    function rooms allows these corporations to better plan out events such as company
+                                    meetings and company-wide celebrations. Others can also make use of the different
+                                    function rooms to hold birthday parties, as long as they’re able to properly
+                                    coordinate with the venue.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="" src="images/people.png" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
@@ -89,8 +260,8 @@
 
 
     <!-- BOOTSTRAP JS  -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 
