--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between ">
                 <a class="navbar-brand" href="#">
-                    <h4>Chittagong Convention Center</h4>
+                    <h4 style="font-weight: 600;">Chittagong Convention Center</h4>
                 </a>
                 <div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -29,9 +29,9 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav fw-bold">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link nav-link active" href="#">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About Us</a>
@@ -63,7 +63,7 @@
                             next event</h1>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit </p>
-                        <button class="btn btn-light text-primary font-weight-bold">Book Now</button>
+                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="images/banner.png" alt="Second slide">
@@ -127,6 +127,9 @@
                 </div>
                 <div class="col-sm-12 col-lg-3 col-md-6">
                     <div class="card border-0 bg-featured">
+                        <span class="position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger">
+                            HOT
+                        </span>
                         <div class="card-body">
                             <h2 class="card-title text-white">$300</h2>
                             <h3 class=" text-white">Business fair</h3>
@@ -166,10 +169,10 @@
             </div>
         </section>
         <!-- Frequently Asked Questions Section  -->
-        <section class="container">
-            <h1 class="text-center my-5">Happy Clients says</h1>
-            <div class="row">
-                <div class="col-lg-6">
+        <section class="container my-5">
+            <h1 class="text-center my-5">QNA from Clients</h1>
+            <div class="row gy-5">
+                <div class="col-lg-6 ">
                     <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -248,14 +251,29 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="" src="images/people.png" alt="">
+                    <img class="w-100" src="images/people.png" alt="">
                 </div>
             </div>
         </section>
 
     </main>
-    <footer>
-
+    <footer class="bg-footer">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-lg-6 col-sm-12 text-white text-start ">
+                    <p>© 2020 bike. All rights reserved</p>
+                </div>
+                <div class="col-lg-6 col-sm-12 text-white float-end float-md-start text-lg-end">
+                    <p class="">Get The App</p>
+                    <div class="">
+                        <a href="www.apple.com/app-store"><img style="width: 41%;" class="b-1 "
+                                src="icons/app-store-icon.png" alt=""></a><br>
+                        <a href="play.google.com"><img style="width: 40%;" class="" src="icons/google-play.png"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
