--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link nav-link active" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="#pricing">Pricing</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
@@ -49,15 +49,20 @@
             </nav>
         </div>
         <!-- Carousel Section  -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+            </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/banner.png" alt="First slide">
+                    <img src="images/banner.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block mb-5">
                         <h1>The perfect venue for your
                             next event</h1>
@@ -65,26 +70,53 @@
                             consequat duis enim velit </p>
                         <button class="btn btn-light text-primary fw-bold">Book Now</button>
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/banner.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/banner.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner-2.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block mb-5">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                <div class="carousel-item">
+                    <img src="images/banner-3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block mb-5">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner-4.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block mb-5">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                    </div>
+                </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
     <main>
         <!-- Pricing Section  -->
-        <section class="container my-5">
+        <section id="pricing" class="container my-5">
             <h1 class="text-center my-5">Our package</h1>
             <div class="row">
                 <div class="col-sm-12 col-lg-3 col-md-6 my-5">
@@ -101,6 +133,7 @@
                                 <li>Event support</li>
                                 <li>Decoration design</li>
                                 <li>Per day bill</li>
+                                <li>Highly Accessible</li>
                             </ul>
                             <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
                         </div>
@@ -120,6 +153,7 @@
                                 <li>Mangement support</li>
                                 <li>Decoration design</li>
                                 <li>Billed as shift</li>
+                                <li>Highly Accessible</li>
                             </ul>
                             <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
                         </div>
@@ -142,6 +176,7 @@
                                 <li>Buffet food</li>
                                 <li>Premium Decoration</li>
                                 <li>Pay as plan</li>
+                                <li>Highly Accessible</li>
                             </ul>
                             <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
                         </div>
@@ -161,6 +196,7 @@
                                 <li>Buffet food</li>
                                 <li>Premium Decoration</li>
                                 <li>Pay as plan</li>
+                                <li>Highly Accessible</li>
                             </ul>
                             <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
                         </div>
@@ -266,9 +302,9 @@
                 <div class="col-lg-6 col-sm-12 text-white float-end float-md-start text-lg-end">
                     <p class="">Get The App</p>
                     <div class="">
-                        <a href="www.apple.com/app-store"><img style="width: 41%;" class="b-1 "
+                        <a href="www.apple.com/app-store"><img style="width: 40%;" class="b-1 "
                                 src="icons/app-store-icon.png" alt=""></a><br>
-                        <a href="play.google.com"><img style="width: 40%;" class="" src="icons/google-play.png"
+                        <a href="play.google.com"><img style="width: 40%;" class="my-4" src="icons/google-play.png"
                                 alt=""></a>
                     </div>
                 </div>
