--- a/index.html
+++ b/index.html
@@ -291,6 +291,39 @@
                 </div>
             </div>
         </section>
+        <!-- Book Now Section  -->
+        <section class="container">
+            <div class="row my-5 gx-5">
+                <div class="col-lg-8 col-sm-12">
+                    <h1 class="my-4">Check Availability</h1>
+                    <p class="">CCC is the only multi-purpose convention facility
+                        in the country, having 17 (seventeen) venues for holding small to large scale events, i.e, state
+                        functions, social events, seminars, conferences, product launches, annual general meetings,
+                        fairs, exhibitions, cultural programs, reality shows, etc. BICC has been the venue for many
+                        renowned economic, social and cultural events. It has proudly hosted a number of international
+                        conferences and summits.</p>
+                </div>
+                <div class="col-lg-4 col-sm-12 mt-5">
+                    <select class="form-select my-4" aria-label="Default select example">
+                        <option selected>Select Vanue</option>
+                        <option value="1">Peninsula</option>
+                        <option value="2">King of Chittagong</option>
+                        <option value="3">Redison Blue</option>
+                    </select>
+                    <select class="form-select my-4" aria-label="Default select example">
+                        <option selected>Select Week</option>
+                        <option value="1">First Week</option>
+                        <option value="2">Seconf Week</option>
+                        <option value="3">Third Week</option>
+                        <option value="4">Fourth Week</option>
+                    </select>
+                    <div class="text-center">
+                        <button class="btn-fav
+                    ">Check Availability</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer class="bg-footer">
