--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
+
 </head>
 
 <body>
@@ -40,7 +42,8 @@
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Subscribe</a>
+                                <a class="nav-link" href="#subscribe"><span class="d-flex">Subscribe <span
+                                            style="margin-left: 5px;" class="badge bg-badge">New</span></span> </a>
                             </li>
 
                         </ul>
@@ -292,7 +295,10 @@
             </div>
         </section>
         <!-- Book Now Section  -->
-        <section class="container">
+        <section id="subscribe" class="container">
+
+
+
             <div class="row my-5 gx-5">
                 <div class="col-lg-8 col-sm-12">
                     <h1 class="my-4">Check Availability</h1>
@@ -303,8 +309,9 @@
                         renowned economic, social and cultural events. It has proudly hosted a number of international
                         conferences and summits.</p>
                 </div>
-                <div class="col-lg-4 col-sm-12 mt-5">
-                    <select class="form-select my-4" aria-label="Default select example">
+                <div class="col-lg-4 col-sm-12 my-5">
+                    <h4 class="text-center">Check Availability Here</h4>
+                    <select class="form-select mb-4" aria-label="Default select example">
                         <option selected>Select Vanue</option>
                         <option value="1">Peninsula</option>
                         <option value="2">King of Chittagong</option>
@@ -318,12 +325,15 @@
                         <option value="4">Fourth Week</option>
                     </select>
                     <div class="text-center">
-                        <button class="btn-fav
+                        <button class="btn-fav bg-featured
                     ">Check Availability</button>
                     </div>
                 </div>
             </div>
         </section>
+
+
+
 
     </main>
     <footer class="bg-footer">
@@ -350,6 +360,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
+
+
+
+
 </body>
 
 </html>
