--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                     <div class="carousel-caption d-none d-md-block mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
-                            secure
-                            and confident booking your next meeting in Chittagong.</p>
+                            secure and confident booking your next meeting in Chittagong.</p>
                         <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
                                 href="google.com">Book Now</a></button>
                     </div>
@@ -80,10 +79,9 @@
                     <div class="carousel-caption d-none d-md-block mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
-                            secure
-                            and confident booking your next meeting in Chittagong</p>
+                            secure and confident booking your next meeting in Chittagong.</p>
                         <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
-                                href="google.com">Book Now</a< /button>
+                                href="google.com">Book Now</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -91,10 +89,9 @@
                     <div class="carousel-caption d-none d-md-block mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
-                            secure
-                            and confident booking your next meeting in Chittagong</p>
+                            secure and confident booking your next meeting in Chittagong.</p>
                         <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
-                                href="google.com">Book Now</a< /button>
+                                href="google.com">Book Now</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -102,10 +99,9 @@
                     <div class="carousel-caption d-none d-md-block mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
-                            secure
-                            and confident booking your next meeting in Chittagong</p>
+                            secure and confident booking your next meeting in Chittagong.</p>
                         <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
-                                href="google.com">Book Now</a< /button>
+                                href="google.com">Book Now</a></button>
                     </div>
                 </div>
             </div>
