--- a/index.html
+++ b/index.html
@@ -411,12 +411,17 @@
                 </div>
             </div>
         </section>
-        <div class="toast show my-5 align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">
-                    <img src="icons/Vector.svg" alt=""> 50% Off Hurry Up!
+        <div class="container">
+            <div style="">
+                <div class="toast show my-5 align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="d-flex">
+                        <div class="toast-body">
+                            <img src="icons/Vector.svg" alt=""> 50% Off Hurry Up!
+                        </div>
+                        <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
+                            aria-label="Close"></button>
+                    </div>
                 </div>
-                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
         </div>
 
